--- a/demo.html
+++ b/demo.html
@@ -9,10 +9,10 @@
 
 $(function() {
 	wfjs.init("div_target");
-	wfjs.drawCicle({
+	wfjs.circle("aaa", {
 		cx: "100",
 		cy: "50",
-		r: "40",
+		r: "30",
 		stroke: "black",
 		stroke_width: "2",
 		fill: "yellow",
@@ -25,7 +25,6 @@ $(function() {
 	<div id="div_target" style="width:200px; height:100px;"></div>
 
 
-	<div id="div_target1"><svg id="svg_wfjs" xmlns="http://www.w3.org/2000/svg" version="1.1"><circle cx="100" cy="50" r="40" stroke="black" stroke-width="2" fill="green"></circle></svg></div>
 
 </body>
 </html>
