--- a/demo.html
+++ b/demo.html
@@ -9,9 +9,7 @@
 
 $(function() {
 	wfjs.init("div_target");
-	wfjs.circle("aaa", {
-		cx: "100",
-		cy: "50",
+	wfjs.circle(80, 30, "aaa", {
 		r: "30",
 		stroke: "black",
 		stroke_width: "2",
