added another circle

--- a/demo.html
+++ b/demo.html
@@ -9,12 +9,21 @@
 
 $(function() {
 	wfjs.init("div_target");
+
 	wfjs.circle(80, 30, "aaa", {
 		r: "30",
 		stroke: "black",
-		stroke_width: "2",
+		"stroke-width": "2",
 		fill: "yellow",
 	});
+
+	wfjs.circle(80, 120, "bbb", {
+		r: "30",
+		stroke: "black",
+		"stroke-width": "2",
+		fill: "red",
+	});
+
 });
 
 	</script>
