--- a/demo.html
+++ b/demo.html
@@ -24,12 +24,15 @@ $(function() {
 		fill: "red",
 	});
 
+var s1 = new Svg("div_target2");
+
 });
 
 	</script>
 </head>
 <body>
-	<div id="div_target" style="width:500px; height:500px;"></div>
+	<div id="div_target" style="width:500px; height:200px;"></div>
+	<div id="div_target2" style="width:500px; height:500px; background-color: pink;"></div>
 
 
 
