renaved Circle to Node

--- a/demo.html
+++ b/demo.html
@@ -25,14 +25,14 @@ $(function() {
 	});
 
 var canvas1 = new wfjs.Canvas("div_target2");
-var c1 = new wfjs.Circle(canvas1, 10, 30, "ccc", {
+var c1 = new wfjs.Node(canvas1, 10, 30, "ccc", {
 		r: "30",
 		stroke: "black",
 		"stroke-width": "2",
 		fill: "yellow",
 });
 
-var c2 = new wfjs.Circle(canvas1, 50, 30, "ddd", {
+var c2 = new wfjs.Node(canvas1, 50, 30, "ddd", {
 		r: "30",
 		stroke: "red",
 		"stroke-width": "2",
