simpliefed demo node attributes

--- a/demo.html
+++ b/demo.html
@@ -23,12 +23,7 @@ var node2 = new wfjs.Node(canvas1, 40, 120, "second", {
 		fill: "yellow",
 });
 
-var node3 = new wfjs.Node(canvas1, 150, 120, "THIRD", {
-//		r: "30",
-//		stroke: "red",
-//		"stroke-width": "2",
-//		fill: "yellow",
-});
+var node3 = new wfjs.Node(canvas1, 150, 120, "THIRD");
 
 node1.show();
 node2.show();
