--- a/demo.html
+++ b/demo.html
@@ -31,8 +31,8 @@ node2.show();
 node3.show();
 node4.show();
 
-node1.linkTo(node2);
-node1.linkTo(node3);
+node1.connectTo(node2);
+node1.connectTo(node3);
 
 var flowline1 = new wfjs.FlowLine(canvas1, node3, node4);
 
