--- a/demo.html
+++ b/demo.html
@@ -24,7 +24,7 @@ var node2 = new wfjs.Node(canvas1, 40, 120, "second", {
 });
 
 var node3 = new wfjs.Node(canvas1, 300, 120, "THIRD");
-var node4 = new wfjs.Node(canvas1, 200, 200, "4th");
+var node4 = new wfjs.Node(canvas1, 200, 200, "4th Unconnected");
 
 node1.show();
 node2.show();
