--- a/demo.html
+++ b/demo.html
@@ -17,7 +17,7 @@
 	<script type="text/javascript">
 
 $(function() {
-var canvas1 = new wfjs.Canvas("div_target");
+var canvas1 = new wfjs.Canvas("div_target", 500, 500);
 var circle1 = new wfjs.CircleNode(canvas1, 80, 50, "First", {
 		r: 30,
 		stroke: "black",
