--- a/experience.html
+++ b/experience.html
@@ -2,26 +2,29 @@
 <head>
 </head>
 <body>
-	<div id="workflow_diagram1" class="col1" style="width: 100px; height: 150px; overflow: auto; float:left;">
-		<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="506.5" height="200">
-			<circle id="circle_red" cx="50.25" cy="40.5" r="30" fill="red" stroke="#000" style="cursor: move;"> </circle>
-		</svg>
-	</div>
+	<div onmousemove="trace(event);">
+		<div id="workflow_diagram1" class="col1" style="width: 100px; height: 150px; overflow: auto; float:left;">
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="506.5" height="200">
+				<circle id="circle_red" cx="50.25" cy="40.5" r="30" fill="red" stroke="#000" style="cursor: move;"> </circle>
+			</svg>
+		</div>
 
-	<div id="workflow_diagram2" class="col1" style="width: 100px; height: 150px; overflow: auto;">
-		<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="506.5" height="200">
-			<circle id="circle_yellow" cx="50.25" cy="40.5" r="30" fill="yellow" stroke="#000" style="cursor: move;"> </circle>
-		</svg>
-	</div>
+		<div id="workflow_diagram2" class="col1" style="width: 100px; height: 150px; overflow: auto;">
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="506.5" height="200">
+				<circle id="circle_yellow" cx="50.25" cy="40.5" r="30" fill="yellow" stroke="#000" style="cursor: move;"> </circle>
+			</svg>
+		</div>
 
-	<div id="workflow_diagram3" class="col1" style="width: 100px; height: 150px; overflow: auto; float: left;">
-		<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="506.5" height="200">
-			<circle id="circle_blue" cx="50.25" cy="40.5" r="30" fill="blue" stroke="#000" style="cursor: move;"> </circle>
-		</svg>
-	</div>
+		<div id="workflow_diagram3" class="col1" style="width: 100px; height: 150px; overflow: auto; float: left;">
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="506.5" height="200">
+				<circle id="circle_blue" cx="50.25" cy="40.5" r="30" fill="blue" stroke="#000" style="cursor: move;"> </circle>
+			</svg>
+		</div>
 
-	<div style="width: 400px; height: 150px; overflow: auto; ">
-		<span id="value1"></span>
+		<div style="width: 400px; height: 150px; overflow: auto; ">
+			<span id="value1"></span>
+		</div>
+
 	</div>
 
 	<script>
@@ -31,6 +34,9 @@
 			+ " blue.offsetTop:" + document.getElementById("circle_blue").parentElement.parentElement.offsetTop
 
 		;
+		function trace(e){
+			console.debug("tag:" + e.target.tagName + " screenY: " + e.screenY + " pageY: " + e.pageY + " clientY: " + e.clientY + " offsetY: " + e.offsetY + " e.y:" + e.y + " layerY:" + e.layerY);
+		}
 
 	</script>
 </body>
