--- a/demo.html
+++ b/demo.html
@@ -34,16 +34,19 @@ var circle2 = new wfjs.CircleNode(canvas1, 40, 120, "second", {
 
 var circle3 = new wfjs.CircleNode(canvas1, 300, 120, "THIRD");
 var circle4 = new wfjs.CircleNode(canvas1, 200, 200, "4th Unconnected");
+var circle5 = new wfjs.CircleNode(canvas1, 200, 250, "五");
 
 circle1.show();
 circle2.show();
 circle3.show();
 circle4.show();
+circle5.show();
 var dia1 = new wfjs.DiamondNode(canvas1, 200, 100, "decision1");
 var dia2 = new wfjs.DiamondNode(canvas1, 10, 10, "kij 10x10");
 
 circle1.connectTo(circle2);
 circle1.connectTo(dia1);
+dia1.connectTo(circle5);
 circle1.connectTo(circle3);
 
 var flowline1 = new wfjs.FlowLine(canvas1, circle3, circle4);
