added another tricky div

--- a/demo.html
+++ b/demo.html
@@ -61,7 +61,10 @@ var flowline1 = new wfjs.FlowLine(canvas1, circle3, circle4);
 	<div style="width:500px; height:30px; border: 1px solid;">
 		some title
 	</div>
-	<div id="div_target" style="width:500px; height:500px; background-color: pink;"></div>
+	<div style="width:50px; height:300px; border: 1px solid; float: left;">
+		some title
+	</div>
+	<div id="div_target" style="width:500px; height:500px; background-color: pink; float: left;"></div>
 
 
 
